# batch-compress-video-cli

./: LICENSE.txt  Makefile  README.md  pyproject.toml
src/: video_compress.py
tst/: test_compressor.py
tst/asset/: notvideo.txt
